--- a/views/recoder.ejs
+++ b/views/recoder.ejs
@@ -28,6 +28,6 @@
             document.querySelector('a').href = "/live/#"+roomHash;
         </script>
         <video id="localVideo" autoplay muted width="50%" height="50%"></video>
-        <video id="remoteVideo" autoplay width="10%"></video>
+        <video id="remoteVideo" autoplay width="10%" muted></video>
     </body>
 </html>
